--- a/index.html
+++ b/index.html
@@ -1,18 +1,17 @@
 <html>
     <head>
-        <title>My awesome web page</title>
+        <title>Qin-zx's Homepage</title>
         <link rel="stylesheet" href="style.css">
     </head>
 
   <body>
-      <h1>This is 1 h1 title!</h1>
+      <h1>Welcome to Qin-zx's Homepage</h1>
 <img src="https://avatars.githubusercontent.com/u/83333499?v=4">
 
-      <ol>
-        <li>百度</li>
-        <li>谷歌</li>
-      <li>My favorite site is <a href="https://github.com">GitHub</a>!</li>
-        </ol>
+      <ul>
+        <li>Author:Qin-zx</li>
+        <li>Connect me:<a href="https://github.com/Qin-zx">GitHub</a></li>
+        </ul>
       
    </body>
   
