github will a blank pen in a new label
target="_blank"

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
       <ul>
         <li>Author:Qin-zx</li>
-        <li>Connect me:<a href="https://github.com/Qin-zx">GitHub</a></li>
+        <li>Connect me:<a href="https://github.com/Qin-zx" target="_blank">GitHub</a></li>
         </ul>
       
    </body>
